# WarshipGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  buildrun.sh
src/: app.cpp  app.h  app.hpp  board.cpp  board.h  board.hpp  button.cpp  button.h  button.hpp  cell.h  cell.hpp  gamestate.hpp  global.hpp  grid.cpp  grid.h  grid.hpp  main.cpp  player.cpp  player.hpp  ship.cpp  ship.h  ship.hpp
textures/: crosshair.xcf  empty.xcf  hit.xcf  miss.xcf  ship_1.xcf  ship_1_hitted.xcf  ship_2.xcf  ship_2_hitted.xcf  ship_3.xcf  ship_3_hitted.xcf  ship_4.xcf  ship_4_hitted.xcf
